// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar component > passes additional props to AntAvatar 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle css-dev-only-do-not-override-mncuj7"
    style="width: 64px; height: 64px; font-size: 18px;"
  >
    <span
      class="ant-avatar-string"
      style="-webkit-transform: scale(1); transform: scale(1);"
    >
      JD
    </span>
  </span>
</div>
`;

exports[`Avatar component > renders nothing if name is not provided 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-avatar-string"
      style="-webkit-transform: scale(1); transform: scale(1);"
    />
  </span>
</div>
`;

exports[`Avatar component > shows initial for single-word name 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-avatar-string"
      style="-webkit-transform: scale(1); transform: scale(1);"
    >
      A
    </span>
  </span>
</div>
`;

exports[`Avatar component > shows initials for two-word name 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-avatar-string"
      style="-webkit-transform: scale(1); transform: scale(1);"
    >
      JD
    </span>
  </span>
</div>
`;
